helm/Inactive/zincObserve/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zincobserve-ingress
  namespace: zincobserve
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zinc.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: zinc
          port: 5080
  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
